# test-binary

./: .codecov.yml  .gitlab-ci.yml  .nextest-ci-config.toml  Cargo.toml  LICENSE  README.md
src/: lib.rs  stream.rs
testbins/does-build/: Cargo.toml
testbins/doesnt-build/: Cargo.toml
testbins/doesnt-build/src/: main.rs
testbins/feature-test/: Cargo.toml
testbins/feature-test/src/: main.rs
testbins/multiple/: Cargo.toml
tests/: env.rs  tests.rs
workspace-bins/does-build/: Cargo.toml
workspace-bins/does-build/src/: main.rs
