[package]
name = "test-binary"
version = "1.0.1"
authors = ["Jason Heeris <jason.heeris@gmail.com>"]
description = "Build a program in the same crate for integration tests"
keywords = [
    "test",
    "testing",
    "cargo",
    "binary",
    "integration",
]
categories = [
    "development-tools",
    "development-tools::testing",
]
edition = "2021"
license = "MIT"
repository = "https://gitlab.com/detly/test-binary"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cargo_metadata = "0.13"
once_cell = "1.5"
paste = "1.0"
thiserror = "1.0.29"

# Use nightly features only when building docs, so we can get automatic
# annotations on gated features.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

