[package]
name = "test-binary"
version = "3.0.0"
authors = ["Jason Heeris <jason.heeris@gmail.com>"]
description = "Build a program under a crate for integration tests"
keywords = [
    "test",
    "testing",
    "cargo",
    "binary",
    "integration",
]
categories = [
    "development-tools",
    "development-tools::testing",
]
edition = "2021"
license = "MIT"
repository = "https://gitlab.com/rust-test-binary/test-binary/"
homepage = "https://gitlab.com/rust-test-binary/test-binary/"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
camino = "1.1"
cargo_metadata = "0.15"
once_cell = "1.5"
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
indoc = "2.0"

[[test]]
name = "env"

# Use nightly features only when building docs, so we can get automatic
# annotations on gated features.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

