[package]
name = "test-binary"
version = "3.0.2"
authors = ["Jason Heeris <jason.heeris@gmail.com>"]
description = "Manage and build extra binaries for integration tests as regular Rust crates."
keywords = [
    "test",
    "testing",
    "cargo",
    "binary",
    "integration",
]
categories = [
    "development-tools",
    "development-tools::testing",
]
edition = "2021"
license = "MIT"
repository = "https://gitlab.com/rust-test-binary/test-binary/"
homepage = "https://gitlab.com/rust-test-binary/test-binary/"
# Note that by default Cargo will not include any sub-packages in a package.
# This really means that any such projects *under* "testbins" will be excluded.
# Here we exclude the entire "testbins" directory altogether, because it is not
# necessary for the package.
exclude = [
    ".gitlab-ci.yml",
    "testbins/**"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
camino = "1.1"
cargo_metadata = "0.15"
once_cell = "1.5"
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
indoc = "2.0"

[[test]]
name = "env"

# Use nightly features only when building docs, so we can get automatic
# annotations on gated features.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

