[package]
name = "feature-test"
version = "0.1.0"
edition = "2021"
description = "Part of the test-binary crate"
authors = ["Jason Heeris <jason.heeris@gmail.com>"]
license = "MIT"
repository = "https://gitlab.com/detly/test-binary"

# A deliberately empty workspace section so that Cargo doesn't try to search
# upwards, just in case the parent manifest is broken. See:
# https://github.com/rust-lang/cargo/issues/10872#issuecomment-1186112506
[workspace]

# This tests both the --no-default-features and --features flags, by having a
# "broken" build for a default feature or no features, and only working with the
# "working" feature.
[features]
default = ["broken"]
broken = []
working = []
